--- a/Browser Extension/style.css
+++ b/Browser Extension/style.css
@@ -21,6 +21,21 @@ button {
     margin-bottom: 10px;
   }
 
+#loader {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid red; /* Red */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: none;
+  animation: spin 2s linear infinite;
+}
+  
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 /* table {
   display: none;
 } */
